k8s/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-versioning-docs-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/rewrite-target: /api/$1
spec:
  rules:
  - http:
      paths:
      - path: /api/v1/(docs(/$|$))
        pathType: Prefix
        backend:
          service:
            name: app-service-v1
            port:
              number: 3000
      - path: /api/v2/(docs(/$|$))
        pathType: Prefix
        backend:
          service:
            name: app-service-v2
            port:
              number: 3000
      - path: /api/(docs(/$|$))
        pathType: Prefix
        backend:
          service:
            name: app-service-v2
            port:
              number: 3000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-versioning-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /api/$2
spec:
  rules:
  - http:
      paths:
      - path: /api/v1(/|$)((?!docs(/$|$))(.*))
        pathType: Prefix
        backend:
          service:
            name: app-service-v1
            port:
              number: 3000
      - path: /api/v2(/|$)((?!docs(/$|$))(.*))
        pathType: Prefix
        backend:
          service:
            name: app-service-v2
            port:
              number: 3000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-service-v2
            port:
              number: 3000
